--- a/Notifica-FrontEnd/src/app/components/layout/menu/menu.component.html
+++ b/Notifica-FrontEnd/src/app/components/layout/menu/menu.component.html
@@ -19,7 +19,7 @@
           <a class="nav-link active" aria-current="page" href="/admin/usuarios">Usuarios</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" href="login">Salas</a>
+          <a class="nav-link active" href="/admin/salas">Salas</a>
         </li>
         <li class="nav-item">
           <a class="nav-link active" href="login">Cursos</a>
