--- a/Notifica-FrontEnd/src/styles.scss
+++ b/Notifica-FrontEnd/src/styles.scss
@@ -1,1 +1,11 @@
-/* You can add global styles to this file, and also import other style files */
+
+
+
+.centralizar{
+    text-align: center;
+   
+}
+
+body{
+    background-color: #00ff7b91;
+}
