--- a/Notifica-FrontEnd/src/app/components/layout/menu/menu.component.html
+++ b/Notifica-FrontEnd/src/app/components/layout/menu/menu.component.html
@@ -22,7 +22,7 @@
           <a class="nav-link active" href="/admin/salas">Salas</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" href="login">Cursos</a>
+          <a class="nav-link active" href="/admin/cursos">Cursos</a>
         </li>
       </ul>
 
